setup backbone framework

--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ATNA</title>
+		<title>And The Nominees Are... | Find academy award nominees by year</title>
 		<link rel="stylesheet" type="text/css" media="all" href="style.css">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-	    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-	    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 	</head>
 	<body>
 		
+		<h1>And the nominees are...</h1>
 		
+		<div id="atna">
+			<!-- This div is where we'll be adding our backbone app to the dom. -->
+		</div>
+		
+		<script type="text/javascript" src="lib/jquery.min.js"></script>
+	    <script type="text/javascript" src="lib/underscore.min.js"></script>
+	    <script type="text/javascript" src="lib/backbone.min.js"></script>
+	    <script type="text/javascript" src="js/main.js"></script>
+	    <script type="text/javascript" src="js/models.js"></script>
+	    <script type="text/javascript" src="js/collections.js"></script>
+	    <script type="text/javascript" src="js/views.js"></script>
+	    <script type="text/javascript" src="js/router.js"></script>
+	    <script type="text/template"   src="templates/movie.js"></script>
+		
+		<script type="text/javascript">
+			
+			// get our routes going
+			new atna.router;
+			Backbone.history.start();
+			
+		</script>
 		
 	</body>
 </html>
