--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 	    <script type="text/template"   src="templates/movie.js"></script>
 		
 		<script type="text/javascript">
-			
-			// get our routes going
-			new atna.router;
-			Backbone.history.start();
+			$(document).ready(function() {
+				
+				// get our routes going
+				new atna.router('bar');
+				Backbone.history.start();
+				
+			});
 			
 		</script>
 		
