--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>And The Nominees Are... | Find academy award nominees by year</title>
-		<link rel="stylesheet" type="text/css" media="all" href="style.css">
+		<link rel="stylesheet" type="text/css" media="all" href="./style.css">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -17,16 +17,15 @@
 			<!-- This div is where we'll be adding our backbone app to the dom. -->
 		</div>
 		
-		<script type="text/javascript" src="lib/jquery.min.js"></script>
-	    <script type="text/javascript" src="lib/underscore.min.js"></script>
-	    <script type="text/javascript" src="lib/backbone.min.js"></script>
-	    <script type="text/javascript" src="js/main.js"></script>
-	    <script type="text/javascript" src="js/models.js"></script>
-	    <script type="text/javascript" src="js/collections.js"></script>
-	    <script type="text/javascript" src="js/views.js"></script>
-	    <script type="text/javascript" src="js/router.js"></script>
-	    <script type="text/template"   src="templates/movie.js"></script>
-		
+		<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	    <script type="text/javascript" src="./lib/underscore.min.js"></script>
+	    <script type="text/javascript" src="./lib/backbone.min.js"></script>
+	    <script type="text/javascript" src="./js/main.js"></script>
+	    <script type="text/javascript" src="./js/models.js"></script>
+	    <script type="text/javascript" src="./js/collections.js"></script>
+	    <script type="text/javascript" src="./js/views.js"></script>
+	    <script type="text/javascript" src="./js/router.js"></script>
+	    <script type="text/template"   src="./templates/movie.js"></script>
 		<script type="text/javascript">
 			
 			// get our routes going
