--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
 	</head>
 	<body>
 		
-		<h1>And the nominees are...</h1>
-		
 		<div id="atna">
 			<!-- This div is where we'll be adding our backbone app to the dom. -->
 		</div>
@@ -22,10 +20,19 @@
 	    <script type="text/javascript" src="lib/backbone.min.js"></script>
 	    <script type="text/javascript" src="js/main.js"></script>
 	    <script type="text/javascript" src="js/models.js"></script>
-	    <script type="text/javascript" src="js/collections.js"></script>
+	    <!-- <script type="text/javascript" src="js/collections.js"></script> -->
 	    <script type="text/javascript" src="js/views.js"></script>
 	    <script type="text/javascript" src="js/router.js"></script>
-	    <script type="text/template"   src="templates/movie.js"></script>
+	    <script type="text/template"   id="main-template">
+	    	<h1>And The Nominees Are...</h1>
+
+			<select>
+				<option>Please Select A Year</option>
+				<option>1982</option>
+				<option>1981</option>
+				<option>1980</option>
+			</select>
+	    </script>
 		
 		<script type="text/javascript">
 			$(document).ready(function() {
