--- a/public/index.html
+++ b/public/index.html
@@ -4,34 +4,85 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>And The Nominees Are... | Find academy award nominees by year</title>
-		<link rel="stylesheet" type="text/css" media="all" href="style.css">
+		<link rel="stylesheet" type="text/css" media="all" href="css/normalize.min.css">
+		<link rel="stylesheet" type="text/css" media="all" href="css/main.css">
+		<link rel="stylesheet" type="text/css" media="all" href="font-awesome.min.css">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
 	<body>
+		<div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">ATNA</h1>
+                <i class="fa fa-camera-retro fa-lg"></i>
+                <nav>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
 		
 		<div id="atna">
 			<!-- This div is where we'll be adding our backbone app to the dom. -->
 		</div>
 		
+		<div class="footer-container">
+            <footer class="wrapper">
+                <h3>footer</h3>
+            </footer>
+        </div>
+		
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
 	    <script type="text/javascript" src="lib/underscore.min.js"></script>
 	    <script type="text/javascript" src="lib/backbone.min.js"></script>
+	    <script type="text/javascript" src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	    <script type="text/javascript" src="js/main.js"></script>
 	    <script type="text/javascript" src="js/models.js"></script>
 	    <!-- <script type="text/javascript" src="js/collections.js"></script> -->
 	    <script type="text/javascript" src="js/views.js"></script>
 	    <script type="text/javascript" src="js/router.js"></script>
 	    <script type="text/template"   id="main-template">
-	    	<h1>And The Nominees Are...</h1>
-
-			<select>
-				<option>Please Select A Year</option>
-				<option>1982</option>
-				<option>1981</option>
-				<option>1980</option>
-			</select>
+	    	
+	    	<div class="main-container">
+	            <div class="main wrapper clearfix">
+		            <section class="select-year">
+						<header><i class="fa fa-chevron-down"></i>Select by year</header>
+						<div class="styled-select">
+							<select data-placeholder="&nbsp;Year" style="width:300px;" tabindex="1" id="year">
+								<option value="2013">2013</option>
+								<option value="2012">2012</option>
+								<option value="2011">2011</option>
+								<option value="2010">2010</option>
+								<option value="2009">2009</option>
+								<option value="2008">2008</option>
+								<option value="2007">2007</option>
+								<option value="2006">2006</option>
+								<option value="2005">2005</option>
+								<option value="2004">2004</option>
+								<option value="2003">2003</option>
+								<option value="2002">2002</option>
+								<option value="2001">2001</option>
+								<option value="2000">2000</option>
+								<option value="1999">1999</option>
+								<option value="1998">1998</option>
+								<option value="1997">1997</option>
+								<option value="1996">1996</option>
+								<option value="1995">1995</option>
+								<option value="1994">1994</option>
+								<option value="1993">1993</option>
+								<option value="1992">1992</option>
+								<option value="1991">1991</option>
+								<option value="1990">1990</option>
+							</select>
+						</div>
+		            </section>
+	            </div><!--.main .wrapper .clearfix-->
+            </div><!--.main-container-->
+            
 	    </script>
 		
 		<script type="text/javascript">
