Added jquery plugin for dropdown.

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,9 @@
 		-->
 	    <script type="text/javascript" src="js/views.js"></script>
 	    <script type="text/javascript" src="js/router.js"></script>
-      <script src="//use.typekit.net/gwd3ykr.js"></script>
-      <script>try{Typekit.load();}catch(e){}</script>
+	    <script type="text/javascript" src="js/jquery.customSelect.min.js"></script>
+		<script src="//use.typekit.net/gwd3ykr.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
 		
 		<script type="text/javascript">
 			$(document).ready(function() {
