--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<title>And The Nominees Are... | Find academy award nominees by year</title>
 		<link rel="stylesheet" type="text/css" media="all" href="css/normalize.min.css">
 		<link rel="stylesheet" type="text/css" media="all" href="css/main.css">
-		<link rel="stylesheet" type="text/css" media="all" href="font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" media="all" href="css/font-awesome.min.css">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -41,13 +41,13 @@
 	    	<div class="main-container">
 	            <div class="main wrapper clearfix">
 		            <section class="select-year">
-						<header><i class="fa fa-chevron-down"></i>Select by year</header>
-						<div class="styled-select">
-							<select data-placeholder="&nbsp;Year" style="width: 300px;" tabindex="1" id="year">
-								<option>Please select a year</option>
-								<!-- options will be added dynamically -->
-							</select>
-						</div>
+      						<header>Select by year</header>
+      						<div class="styled-select">
+      							<select data-placeholder="&nbsp;Year" tabindex="1" id="year">
+      								<option>Please select a year</option>
+      								<!-- options will be added dynamically -->
+      							</select>
+      						</div>
 		            </section>
 		            <section id="results-list" class="results-list">
 			            <!-- results goes here -->
