Got rid of Github <<<head crap.

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,10 @@
 		<title>And The Nominees Are... | Find academy award nominees by year</title>
 		<link rel="stylesheet" type="text/css" media="all" href="css/normalize.min.css">
 		<link rel="stylesheet" type="text/css" media="all" href="css/main.css">
-<<<<<<< HEAD
 		<link rel="stylesheet" type="text/css" media="all" href="font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" media="all" href="js/fancybox/jquery.fancybox.css">
 		<link rel="stylesheet" type="text/css" media="all" href="js/fancybox/jquery.fancybox-buttons.css">
-=======
 		<link rel="stylesheet" type="text/css" media="all" href="css/font-awesome.min.css">
->>>>>>> master
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -22,13 +19,6 @@
             <header class="wrapper clearfix">
                 <h1 class="title">ATNA</h1>
                 <i class="fa fa-camera-retro fa-lg"></i>
-                <nav>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
             </header>
         </div>
 		
@@ -37,9 +27,7 @@
 		</div>
 		
 		<div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
+            <footer class="wrapper"></footer>
         </div>
         
         <!-- TEMPLATES -->
