--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
 	<body>
 		<div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">ATNA</h1>
-                <i class="fa fa-camera-retro fa-lg"></i>
+                <h1 class="title">ATNA <span class="sub-title">and the nominees are</span></h1>
             </header>
         </div>
 		
@@ -35,7 +34,7 @@
 	    	<div class="main-container">
 	            <div class="main wrapper clearfix">
 		            <section class="select-year">
-      						<header>Select by year</header>
+      						<header>View Best Picture Academy Award Nominees Trailers by year</header>
       						<div class="styled-select">
       							<select data-placeholder="&nbsp;Year" tabindex="1" id="year">
       								<option>Please select a year</option>
