Update styles for select-year section, header, footer, hover states for posters, select menu colors, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 							<header>View Best Picture Academy Award Nominees Trailers by year</header>
 							<div class="styled-select">
 								<select data-placeholder="&nbsp;Year" tabindex="1" id="year">
-									<option>Please select a year</option>
+									<option>Select a year</option>
 									<!-- options will be added dynamically -->
 								</select>
 							</div>
