Reworked breakpoints. Went with 4 column for large screen.

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
         <script type="text/template"   id="main-template">
         	<div class="select-year-hero">
 						<section class="select-year">
-							<header>View Best Picture Academy Award Nominees Trailers by year</header>
+							<header>View Best Picture Nominees Trailers By Year</header>
 							<div class="styled-select">
 								<select data-placeholder="&nbsp;Year" tabindex="1" id="year">
-									<option>Select a year</option>
+									<option>Select year</option>
 									<!-- options will be added dynamically -->
 								</select>
 							</div>
