--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 			</div><!--.poster-container-->
 			<footer><!-- Other content will go here --></footer>
 			<div id="trailer-<%= trailer_id %>" style="display: none;">
-				<iframe width="640" height="390" frameborder="0" title="YouTube video player" type="text/html" src="http://www.youtube.com/embed/<%= trailer_id %>?enablejsapi=1"></iframe>
+				<iframe width="640" height="390" frameborder="0" title="YouTube video player" type="text/html" src="https://www.youtube.com/embed/<%= trailer_id %>?enablejsapi=1"></iframe>
 			</div>
 	    </script>
 		
